--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/Jakepodell/nba_predictor#readme",
   "dependencies": {
+    "csvtojson": "^1.1.4",
     "express": "^4.15.2",
+    "fs-promise": "^2.0.2",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
   }
