--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "csvtojson": "^1.1.4",
     "express": "^4.15.2",
     "fs-promise": "^2.0.2",
+    "promise": "^7.1.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
   }
