--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "csvtojson": "^1.1.4",
     "express": "^4.15.2",
     "fs-promise": "^2.0.2",
+    "jquery": "^3.2.1",
+    "path": "^0.12.7",
     "promise": "^7.1.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
