--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Jakepodell/nba_predictor#readme",
   "dependencies": {
     "async": "^2.3.0",
+    "body-parser": "^1.17.1",
     "csvtojson": "^1.1.4",
     "express": "^4.15.2",
     "fs-promise": "^2.0.2",
